--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Express API for car researcher",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm i"
   },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
