--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "Express API for car researcher",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
 
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mongoosejs/double": "^0.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "mongoose-int32": "^0.6.0",
     "nodemon": "^3.0.2"
   }
 }
