--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -1,1 +1,37 @@
+name: clone-build-test
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+jobs:
+  clone: 
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+  build:
+    needs: clone
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${( runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}--buildx-
+    
+    - name: Build Docker image
+      run: docker build -t cardatapp .
 
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run tests
+      run: docker run cardatapp npm test
