--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -1,11 +1,13 @@
 name: clone-build-test
+
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
 jobs:
-  clone: 
+  clone:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -15,17 +17,20 @@ jobs:
     needs: clone
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    
+      uses: docker/setup-buildx-action@v2
+
     - name: Cache Docker layers
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${( runner.os }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}--buildx-
-    
+          ${{ runner.os }}-buildx-
+
     - name: Build Docker image
       run: docker build -t cardatapp .
 
@@ -33,5 +38,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Run tests
       run: docker run cardatapp npm test
