--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -42,4 +42,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run tests
-      run: docker run cardatapp npm test
+      run: docker run cardatapp:1.0 npm test
