--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -31,15 +31,36 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
     - name: Build Docker image
       run: docker build -t cardatapp:1.0 .
+
+    - name: Save Docker image to cache
+      run: docker save cardatapp:1.0 | gzip > cardatapp.tar.gz
+
+    - name: Upload Docker image
+      uses: actions/upload-artifact@v3
+      with:
+        name: cardatapp-image
+        path: cardatapp.tar.gz
 
   test:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Download Docker image
+      uses: actions/download-artifact@v3
+      with:
+        name: cardatapp-image
+        path: cardatapp.tar.gz
+
+    - name: Load Docker image
+      run: gunzip -c cardatapp.tar.gz | docker load
 
     - name: Run tests
       run: docker run cardatapp:1.0 npm test
