--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Build Docker image
       run: docker build -t cardatapp .
 
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Run tests
-      run: docker run cardatapp npm test
+  # test:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Run tests
+  #     run: docker run cardatapp npm test
