--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
       uses: docker/setup-buildx-action@v1
     - name: Log in to Amazon ECR
       env:
-        AWS_REGION: us-east-1
+        AWS_REGION: eu-west-3
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       run: |
         echo ${{ secrets.AWS_ACCESS_KEY_ID }} | docker login -u AWS -p ${{ secrets.AWS_SECRET_ACCESS_KEY }} $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
     - name: Build, tag, and push Docker image
       env:
-        AWS_REGION: us-east-1
+        AWS_REGION: eu-west-3
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
         IMAGE_REPO_NAME: node-app
         IMAGE_TAG: latest
@@ -31,7 +31,7 @@ jobs:
         $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
     - name: Deploy to Amazon ECS
       env:
-        AWS_REGION: us-east-1
+        AWS_REGION: eu-west-3
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
         ECS_CLUSTER: node-app-cluster
         ECS_SERVICE: node-app-service
