--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
         AWS_REGION: eu-west-3
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       run: |
-        echo ${{ secrets.AWS_ACCESS_KEY_ID }} | docker login -u AWS -p ${{ secrets.AWS_SECRET_ACCESS_KEY }} $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        # echo ${{ secrets.AWS_ACCESS_KEY_ID }} | docker login -u AWS -p ${{ secrets.AWS_SECRET_ACCESS_KEY }} $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
     - name: Build, tag, and push Docker image
       env:
         AWS_REGION: eu-west-3
